--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "[537 rows x 2 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "Name: Humidity, Length: 537, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,20 +244,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c74b5f2e0ce436597ec8199520362b5",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Figure(layout=FigureLayout(height='420px'))"
+       "<Figure size 432x288 with 0 Axes>"
       ]
      },
      "metadata": {},
@@ -270,23 +265,19 @@
     "\n",
     "# # Create heat layer\n",
     "heat_layer = gmaps.heatmap_layer(Locations, weights=Weight, \n",
-    "                                 dissipating=False, max_intensity=10,\n",
+    "                                 dissipating=False, max_intensity=20,\n",
     "                               point_radius=1)\n",
     "\n",
     "\n",
     "# # Add layer\n",
     "fig.add_layer(heat_layer)\n",
     "\n",
+    "plt.savefig(\"images.p\")\n",
     "# Display figure\n",
-    "fig"
+    "fig\n",
+    "\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -299,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +505,7 @@
        "[143 rows x 10 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,14 +531,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-20-e5edde5e9f04>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-8-e5edde5e9f04>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -694,7 +685,7 @@
        "[143 rows x 5 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,14 +698,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'index' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-ed3ffdd1375b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhotel_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mLatitude\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhotel_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Latitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mLongitude\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhotel_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Longitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'index' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "Hotel_Name = []\n",
+    "\n",
+    "for x in range(len(hotel_df)):\n",
+    "    Latitude = hotel_df.loc[index,'Latitude']\n",
+    "    Longitude = hotel_df.loc[index,'Longitude']\n",
+    "\n",
+    "    params = {\n",
+    "        \"location\": f\"{Latitude},{Longitude}\",\n",
+    "        \"radius\": 5000,\n",
+    "        \"types\" : \"hotel\",\n",
+    "        \"key\": g_key\n",
+    "    }\n",
+    "    \n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "    Hotel_name= requests.get(base_url, params=params)\n",
+    "    Hotel_name = Hotel_name.json()\n",
+    "    try:\n",
+    "        Hotel_Name.append(jsn['results'][0]['name'])\n",
+    "    except:\n",
+    "        Hotel_Name.append(\"\")\n",
+    "hotel_df[\"Hotel Name\"] = Hotel_Name\n",
+    "hotel_df = hotel_df.dropna(how='any')\n",
+    "hotel_city_df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,18 +763,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c74b5f2e0ce436597ec8199520362b5",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Figure(layout=FigureLayout(height='420px'))"
+       "<Figure size 432x288 with 0 Axes>"
       ]
      },
      "metadata": {},
@@ -759,15 +781,18 @@
     "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
     "fig.add_layer(marker_layer)\n",
     "\n",
-    "\n",
-    "# # Add layer\n",
-    "#fig.add_layer(heat_layer)\n",
-    "\n",
-    "# Display figure\n",
     "fig\n",
     "\n",
+    "plt.savefig(\"images\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
