--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -244,11 +244,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e075d7bb5ef4a1fbb3ed1a2cb6c842a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
@@ -272,7 +286,8 @@
     "# # Add layer\n",
     "fig.add_layer(heat_layer)\n",
     "\n",
-    "plt.savefig(\"images.p\")\n",
+    "plt.savefig(\"images\")\n",
+    "\n",
     "# Display figure\n",
     "fig\n",
     "\n",
@@ -763,9 +778,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e075d7bb5ef4a1fbb3ed1a2cb6c842a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
@@ -781,9 +810,11 @@
     "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
     "fig.add_layer(marker_layer)\n",
     "\n",
+    "plt.savefig(\"images\")\n",
+    "\n",
     "fig\n",
     "\n",
-    "plt.savefig(\"images\")\n",
+    "\n",
     "\n"
    ]
   },
